mcp-attr/tests/compile_fail/complete_wrong_first_arg.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/complete_wrong_first_arg.rs:12:44
   |
12 |     async fn test_prompt(&self, #[complete(complete_wrong_first_arg)] msg: String) -> Result<String> {
   |                                            ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                            |
   |                                            expected `i32`, found `&String`
   |                                            arguments to this function are incorrect
   |
note: function defined here
  --> tests/compile_fail/complete_wrong_first_arg.rs:5:10
   |
5  | async fn complete_wrong_first_arg(value: i32, _cx: &RequestContext) -> Result<Vec<String>> {
   |          ^^^^^^^^^^^^^^^^^^^^^^^^ ----------
